fixed hero caption alignment in photo essay template

--- a/wp-content/themes/nationswell/scss/partials/desktop/_story.scss
+++ b/wp-content/themes/nationswell/scss/partials/desktop/_story.scss
@@ -107,12 +107,11 @@
 
       .photo-essay-hero-information__caption {
         color: $ns_navy2;
-        display:none;
+        visibility:hidden;
       }
 
       .photo-essay-hero-information__credit {
         color: $ns_navy4;
-        margin-right:17%;
       }
     }
   }
